src/objects/Goals__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>First Calendar date of the quarter that the goals are applicable for.</inlineHelpText>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geo_Name__c</fullName>
        <label>Geo Name</label>
        <picklist>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Forecast__c</fullName>
        <description>In Thousands</description>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Plan Forecast</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter_of_Year__c</fullName>
        <label>Quarter of Year</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stretch_Forecast__c</fullName>
        <description>In Thousands</description>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Stretch Forecast</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Quarter__c</columns>
        <columns>Quarter_of_Year__c</columns>
        <columns>Plan_Forecast__c</columns>
        <columns>Stretch_Forecast__c</columns>
        <columns>Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Y-{0000}</displayFormat>
        <label>Yearly Goals</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <recordTypes>
        <fullName>Quarterly_Goal</fullName>
        <active>true</active>
        <label>Quarterly Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yearly_Goal</fullName>
        <active>true</active>
        <label>Yearly Goal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>